--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URL= 'mongodb://localhost:27017/masaizon20'
+MONGODB_URL= mongodb+srv://r:lo@cluster0.1eeagss.mongodb.net/tree?retryWrites=true&w=majority
